# pyspark-devcontainer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test.ipynb
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: ci.yml
tests/: test_smoke.py
